@@ -30,6 +30,8 @@ Fixed: Issue #396: Disable CLI colors if the output is not tty.
 
 Fixed: Issue #400: Clarify network tests documentation.
 
+Fixed: Return syntax error if send/expect statement is used in the context of other protocol test.
+
 Fixed: If the resource check is disabled (for example because the user doesn't have privileges to
 read the data), emit just warning on startup.
 
